--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -23,21 +23,22 @@
     <div class="searchTool">
       <span class="searchName">노선검색</span>
       <div class="routeFilterBox">
-        <input type="text" class="inputModules" list="groupFilter" placeholder="그룹이름">
+        <input value="{{group_old}}" name="group" type="text" class="inputModules" list="groupFilter" placeholder="그룹이름" autocomplete="off">
         <datalist id="groupFilter">
-          <option value="그룹이름"></option>
-          <option value="항목1"></option>
+          {% for group in group_list %}
+          <option value="{{group.name}}"></option>
+          {% endfor %}
         </datalist>
-        <input type="text" class="inputModules" list="routeFilter" placeholder="노선이름">
+        <input value="{{route_old}}" name="route" type="text" class="inputModules" list="routeFilter" placeholder="노선이름" autocomplete="off">
         <datalist id="routeFilter">
-          <option value="노선이름"></option>
-          <option value="항목1"></option>
+          {% for order in order_list %}
+          <option value="{{order.route}}"></option>
+          {% endfor %}
         </datalist>
       </div>
       <div class="dateFilterBox">
-        <span>기간</span>
-        <input type="date" class="inputModules">~
-        <input type="date" class="inputModules">
+        <span>날짜</span>
+        <input value="{{date}}" name='date' type="date" class="inputModules">
       </div>
       <input type="submit" value="검색" class="btnModules">
     </div>
@@ -67,9 +68,9 @@
   <table class="tableBody">
     <tbody>
       {% for dispatch in order_list %}
-      <tr>
+      <tr class="{{dispatch.id}}">
         <td>{{dispatch.group.name}}</td>
-        <td></td>
+        <td>{{dispatch.number}}</td>
         <td class="{{ forloop.counter0 }}">
           <span>{{dispatch.departure}}▶</span>
           <span>{{dispatch.arrival}}</span>
@@ -194,7 +195,8 @@
 
 <div class="popupAreaModulesRoute">
   <div class="popupBgModulesRoute"></div>
-  <form class="popupContainerRoute">
+  <form method="post" action="{% url 'dispatch:regularly_route_edit' %}" class="popupContainerRoute">
+      {% csrf_token %}
       <div class="routePopupTitle">노선상세</div>
       <div class="routePopupDataArea">
           <div class="routePopupDataCell">
@@ -259,107 +261,118 @@
           </div>
       </div>
       <div class="routePopupDataArea">
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">그룹</span>
-              <select class="routePopupDataGroup">
-                  <option value=""></option>
-                  <option value="테스트 그룹 이름">테스트 그룹 이름</option>
-                  <option value=""></option>
-              </select>
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">출발지</span>
-              <input type="text" class="routePopupDataRoutName">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">운행시간</span>
-              <div class="routePopupDataDriveTime">
-                  <input type="time">~
-                  <input type="time">
-              </div>
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">도착지</span>
-              <input type="text" class="routePopupDataRoutName">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">순번</span>
-              <input type="text" class="routePopupDataDriverNumber">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">운행요일</span>
-              <div class="routePopupDataDriveDate">
-                  <div>
-                      <input id="all" type="checkbox">
-                      <label for="all">모두</label>
-                  </div>
-                  <div>
-                      <input id="mon" type="checkbox">
-                      <label for="mon">월</label>
-                      <input id="tue" type="checkbox">
-                      <label for="tue">화</label>
-                      <input id="wed" type="checkbox">
-                      <label for="wed">수</label>
-                      <input id="thu" type="checkbox">
-                      <label for="thu">목</label>
-                      <input id="fri" type="checkbox">
-                      <label for="fri">금</label>
-                      <input id="sat" type="checkbox">
-                      <label for="sat">토</label>
-                      <input id="sun" type="checkbox">
-                      <label for="sun">일</label>
-                  </div>
-              </div>
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">기사수당</span>
-              <input type="text" class="routePopupDataDriverPay">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">버스종류</span>
-              <select name="" id="" class="routePopupDataBusKinds">
-                  <option value="">45</option>
-                  <option value="">41</option>
-                  <option value="">1</option>
-              </select>
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">버스대수</span>
-              <input type="text" class="routePopupDataBusCount">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">거래처</span>
-              <input type="text" class="routePopupDatAaccount">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">거래처 전화번호</span>
-              <input type="text" class="routePopupPhoneNumber">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">계약금액</span>
-              <input type="text" class="routePopupDataContractAmount">
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">계약기간</span>
-              <div class="routePopupDataContractPeriod">
-                  <input type="date">~
-                  <input type="date">
-              </div>
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">출/퇴근</span>
-              <div class="routePopupWork">
-                  <input id="workStart" type="radio" name="work">
-                  <label for="workStart">출근</label>
-                  <input id="workEnd" type="radio" name="work">
-                  <label for="workEnd">퇴근</label>
-              </div>
-          </div>
-          <div class="routePopupDataCell">
-              <span class="routePopupDataTitle">참조사항</span>
-              <input type="text" class="routePopupDataReference">
-          </div>
-      </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">그룹</span>
+            <select name="group" class="routePopupDataGroup">
+                {% for g in group_list %}
+                <option value="{{g.id}}">{{g.name}}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">출발지</span>
+            <input name="departure" type="text" class="routePopupDataRoutName">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">운행시간</span>
+            <div class="routePopupDataDriveTime">
+                <input name="departure_time" type="time">~
+                <input name="arrival_time" type="time">
+            </div>
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">도착지</span>
+            <input name="arrival" type="text" class="routePopupDataRoutName">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">순번</span>
+            <input name="number" type="text" class="routePopupDataDriverNumber">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">운행요일</span>
+            <div class="routePopupDataDriveDate">
+                <div>
+                    <input id="all" type="checkbox">
+                    <label for="all">모두</label>
+                </div>
+                <div>
+                    <input name="week" value="월" id="mon" type="checkbox">
+                    <label for="mon">월</label>
+                    <input name="week" value="화" id="tue" type="checkbox">
+                    <label for="tue">화</label>
+                    <input name="week" value="수" id="wed" type="checkbox">
+                    <label for="wed">수</label>
+                    <input name="week" value="목" id="thu" type="checkbox">
+                    <label for="thu">목</label>
+                    <input name="week" value="금" id="fri" type="checkbox">
+                    <label for="fri">금</label>
+                    <input name="week" value="토" id="sat" type="checkbox">
+                    <label for="sat">토</label>
+                    <input name="week" value="일" id="sun" type="checkbox">
+                    <label for="sun">일</label>
+                </div>
+            </div>
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">기사수당</span>
+            <input name="driver_allowance" type="text" class="routePopupDataDriverPay">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">버스종류</span>
+            <select name="bus_type" id="" class="routePopupDataBusKinds">
+                <option value=""></option>
+                <option value="45인승 대형버스">45인승 대형버스</option>
+                <option value="41인승 대형버스">41인승 대형버스</option>
+                <option value="33인승 중형버스">33인승 중형버스</option>
+                <option value="28인승 대형우등버스">28인승 대형우등버스</option>
+                <option value="24인승 미니썬롱">24인승 미니썬롱</option>
+                <option value="24인승 미니버스">24인승 미니버스</option>
+                <option value="21인승 프리미엄버스">21인승 프리미엄버스</option>
+                <option value="21인승 중형우등버스">21인승 중형우등버스</option>
+                <option value="19인승 미니우등버스">19인승 미니우등버스</option>
+                <option value="16인승 미니우등버스">16인승 미니우등버스</option>
+                <option value="14인승 밴">14인승 밴</option>
+                <option value="10인승 밴">10인승 밴</option>
+            </select>
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">버스대수</span>
+            <input name="bus_cnt" type="text" class="routePopupDataBusCount">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">거래처</span>
+            <input name="customer" type="text" class="routePopupDatAaccount">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">거래처 전화번호</span>
+            <input name="customer_phone" type="text" class="routePopupPhoneNumber">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">계약금액</span>
+            <input name="price" type="text" class="routePopupDataContractAmount">
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">계약기간</span>
+            <div class="routePopupDataContractPeriod">
+                <input name="contract_start_date" type="date">~
+                <input name="contract_end_date" type="date">
+            </div>
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">출/퇴근</span>
+            <div class="routePopupWork">
+                <input value="출근" id="workStart" type="radio" name="work_type">
+                <label for="workStart">출근</label>
+                <input value="퇴근" id="workEnd" type="radio" name="work_type">
+                <label for="workEnd">퇴근</label>
+            </div>
+        </div>
+        <div class="routePopupDataCell">
+            <span class="routePopupDataTitle">참조사항</span>
+            <input name="references" type="text" class="routePopupDataReference">
+        </div>
+        <input type="hidden" value="" name="id" class="sendToHidden">
+    </div>
       <div class="routePopupBtnBox">
           <div class="btnModules">닫기</div>
           <div class="btnModules">수정</div>
