--- a/static/css/dispatch/regularly.css
+++ b/static/css/dispatch/regularly.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 37rem;
+  width: 22rem;
   height: 100%;
   margin-right: 2rem;
 }
@@ -461,11 +461,11 @@ td:nth-child(8) {
   box-sizing: border-box;
 }
 
-.popupContainerRoute .routePopupDataArea:nth-child(2) {
+.popupAreaModulesRoute .routePopupDataArea:nth-child(3) {
   display: flex;
 }
 
-.popupContainerRoute .routePopupDataArea:nth-child(3) {
+.popupAreaModulesRoute .routePopupDataArea:nth-child(4) {
   display: none;
 }
 
