--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -174,6 +174,12 @@ table a {
 
 td:nth-child(1) {
     display: flex;
+    justify-content: center;
+    width: 6%;
+}
+
+td:nth-child(2) {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -181,12 +187,12 @@ td:nth-child(1) {
     padding-left: 2%;
 }
 
-td:nth-child(2) {
-    width: 66%;
+td:nth-child(3) {
+    width: 60%;
     word-break: keep-all;
 }
 
-.tableBody td:nth-child(2) {
+.tableBody td:nth-child(3) {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -195,7 +201,7 @@ td:nth-child(2) {
     cursor: pointer;
 }
 
-td:nth-child(3) {
+td:nth-child(4) {
     width: 14%;
     padding-left: 1%;
 }
@@ -697,4 +703,8 @@ td:nth-child(15) {
     width: 100%;
     border-bottom: 0.1rem solid #191919;
     font-size: 1.4rem;
+}
+
+.btnBox input{
+    background-color: #444444;
 }
